# UT_CS_Research

./: .gitignore  README.md  requirements.txt  simulation_report.md
Phase_1/: README.md  pyproject.toml  requirements.txt  results_comparison.md
Phase_1/.langgraph_api/: .langgraph_ops.pckl
Phase_1/plan_sim/: config.py  docker-compose.extend.yml  env_tool.py  langgraph.json  llm_utils.py  main.py  nodes.py  prompts.py  states.py  vector_store.py
Phase_1/tests/: test_graph_interaction.py
Phase_2/eBay_Simulation/: .env.example  .gitignore  README.md  generate_report.py  requirements.txt  run_simulation.py  setup_sales_sim_db.sql  simulation_report.md
Phase_2/eBay_Simulation/core/: agents.py  analysis.py  product_search.py  simulation.py  state.py
Phase_2/eBay_Simulation/models/: nmf_model.pkl
Phase_2/eBay_Simulation/tests/: test_simulation.py
Phase_2/eBay_Simulation/tools/: ebay_api.py
Phase_2/eBay_Simulation/utils/: db.py  persona.py
Phase_2/persona_clustering/: .gitignore  README.md  requirements.txt
Phase_2/persona_clustering/output_nmf_k20/: README.md  nmf_model.pkl  persona_topic_0_final_prompt.txt  persona_topic_0_prompt_nmf.txt  persona_topic_10_final_prompt.txt  persona_topic_10_top_purchases_nmf.csv  persona_topic_11_final_prompt.txt  persona_topic_11_top_purchases_nmf.csv  persona_topic_12_final_prompt.txt  persona_topic_12_top_purchases_nmf.csv  (+29 more)
plan_sim/: config.py  docker-compose.yml  env_tool.py  langgraph.json  main.py  nodes.py  prompts.py  states.py
src/: config.py  nodes.py  prompts.py  setup.py  states.py
tests/: test_nodes.py
(+38 files in other folders)
