[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "phase1_project"  # TODO: Replace with your actual project name
version = "0.1.0"  # TODO: Replace with your actual project version

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.setuptools]
packages = ["plan_sim", "qdrant_db"] 